Implement modifier into field service calculations

--- a/app/templates/field.html
+++ b/app/templates/field.html
@@ -331,78 +331,48 @@
          aria-labelledby="info-tab">
       <div class="row">
         <div class="col-xxl-9 table-responsive">
-          {# <form>
-          </form> #}
           <table class="table table-sm table-hover caption-top align-middle">
-            <caption>List of soil samples</caption>
+            <caption>List of modifiers</caption>
             <thead class="no-border-top">
               <tr>
                 <th scope="col">
-                  Year
+                  Description
                 </th>
-                <th scope="col" class="select">
-                  Type
+                <th scope="col">
+                  Nutrient
                 </th>
-                <th scope="col" class="select">
-                  Humus
+                <th scope="col">
+                  Amount
                 </th>
-                <th scope="col" class="input">
-                  pH
-                </th>
-                <th scope="col" class="input">
-                  P2O5
-                </th>
-                <th scope="col" class="input">
-                  K2O
-                </th>
-                <th scope="col" class="input">
-                  Mg
+                <th>
                 </th>
               </tr>
             </thead>
             <tbody>
-              {% for sample in base_field.soil_samples %}
-                <tr data-sample-id="{{ sample.id }}">
-                  <th scope="row">
-                    {{ sample.year }}
-                  </th>
-                  <td>
-                    {{ sample.soil_type.value }}
-                  </td>
-                  <td>
-                    {{ sample.humus.value }}
-                  </td>
-                  <td>
-                    {{ sample.ph | format_number(".1f") }}
-                  </td>
-                  <td>
-                    {{ sample.p2o5 | format_number(".1f") }}
-                  </td>
-                  <td>
-                    {{ sample.k2o | format_number(".1f") }}
-                  </td>
-                  <td>
-                    {{ sample.mg | format_number(".1f") }}
-                  </td>
-                  <td class="action table-action d-print-none">
-                    <button class="text-primary border-0 bg-transparent"
-                            type="button"
-                            id="test-btn"
-                            onclick="edit(this);">
-                      <i class="fa-solid fa-pen-to-square fa-lg"></i>
-                    </button>
-                    <button class="text-success border-0 bg-transparent visually-hidden"
-                            type="button"
-                            onclick="save(this);">
-                      <i class="fa-solid fa-square-check fa-xl"></i>
-                    </button>
-                    <button class="text-danger border-0 bg-transparent visually-hidden"
-                            type="button"
-                            onclick="cancel(this);">
-                      <i class="fa-solid fa-square-xmark fa-xl"></i>
-                    </button>
-                  </td>
-                </tr>
+              {% for field in base_field.fields if field.year == current_user.year %}
+                {% for modifier in field.modifiers %}
+                  <tr data-modifier-id="{{ modifier.id }}">
+                    <th scope="row">
+                      {{ modifier.description }}
+                    </th>
+                    <td>
+                      {{ modifier.modification.value }}
+                    </td>
+                    <td>
+                      {{ modifier.amount | format_number(".0f", "kg/ha") }}
+                    </td>
+                    <td class="table-action d-print-none">
+                      <button class="btn btn-link btn-edit"
+                              type="button"
+                              data-bs-toggle="modal"
+                              data-bs-target="#modal"
+                              data-form="modifier"
+                              data-modal="edit">
+                        <i class="fa-solid fa-pencil"></i>
+                      </button>
+                    </td>
+                  </tr>
+                {% endfor %}
               {% endfor %}
             </tbody>
           </table>
