--- a/app/templates/_field.html
+++ b/app/templates/_field.html
@@ -1,17 +1,40 @@
-<details>
-  <summary>
-    <b>{{ "{prefix:02d}-{suffix} {name}".format(prefix=field.prefix, suffix=field.suffix, name=field.name) }}</b>
-  </summary>
-  <table class="table table-hover">
+<div class="table-responsive">
+  <table class="table table-sm table-hover">
     <thead>
-    </thead>
-    {% for field in field.fields %}
       <tr>
-        <td width="100px">{{ field.year }}</td>
-        <td width="100px">{{ '{:.2f}'.format(field.area) }}</td>
-        <td>{{ field.field_type.value }}</td>
+        <th scope="col">Year</th>
+        <th scope="col">Area</th>
+        <th scope="col">Type</th>
+        <th scope="col">Demand</th>
+        <th scope="col" colspan="2">Red region</th>
       </tr>
-    {% endfor %}
+    </thead>
+    <tbody>
+      {% for field in base_field.fields %}
+        <tr>
+          <th scope="row" data-field-id="{{ field.id }}">{{ field.year }}</th>
+          <td>{{ field.area }}</td>
+          <td>{{ field.field_type.value }}</td>
+          <td>{{ field.demand_type.value }}</td>
+          <td>
+            {% if field.red_region %}
+              <i class="fa-solid fa-check fa-fw"></i>
+            {% else %}
+              <i class="fa-solid fa-xmark fa-fw"></i>
+            {% endif %}
+          </td>
+          <td class="table-action d-print-none">
+            <button class="btn btn-link btn-edit"
+                    type="button"
+                    data-bs-toggle="modal"
+                    data-bs-target="#modal"
+                    data-form="field"
+                    data-modal="edit">
+              <i class="fa-solid fa-pencil"></i>
+            </button>
+          </td>
+        </tr>
+      {% endfor %}
+    </tbody>
   </table>
-</details>
-<br>
+</div>
