--- a/app/templates/fields.html
+++ b/app/templates/fields.html
@@ -32,45 +32,7 @@
           </h2>
           <div class="accordion-collapse collapse" id="base{{ loop.index }}">
             <div class="accordion-body pt-0">
-              <table class="table table-sm table-hover">
-                <thead>
-                  <tr>
-                    <th scope="col">Year</th>
-                    <th scope="col">Area</th>
-                    <th scope="col">Type</th>
-                    <th scope="col">Demand</th>
-                    <th scope="col">Red region</th>
-                    <th scope="col"></th>
-                  </tr>
-                </thead>
-                {% for field in base_field.fields %}
-                  <tbody>
-                    <tr>
-                      <th scope="row" data-field-id="{{ field.id }}">{{ field.year }}</th>
-                      <td>{{ field.area }}</td>
-                      <td>{{ field.field_type.value }}</td>
-                      <td>{{ field.demand_type.value }}</td>
-                      <td>
-                        {% if field.red_region %}
-                          <i class="fa-solid fa-check fa-fw"></i>
-                        {% else %}
-                          <i class="fa-solid fa-xmark fa-fw"></i>
-                        {% endif %}
-                      </td>
-                      <td class="table-action d-print-none">
-                        <button class="btn btn-link btn-edit"
-                                type="button"
-                                data-bs-toggle="modal"
-                                data-bs-target="#modal"
-                                data-form="field"
-                                data-modal="edit">
-                          <i class="fa-solid fa-pencil"></i>
-                        </button>
-                      </td>
-                    </tr>
-                  </tbody>
-                {% endfor %}
-              </table>
+              {% include "_field.html" %}
               <button class="btn btn-sm btn-success fw-500 d-print-none"
                       type="button"
                       data-bs-toggle="modal"
@@ -82,6 +44,7 @@
             </div>
           </div>
         </div>
+      </div>
       {% endfor %}
     </div>
 
