--- a/app/templates/utils.html
+++ b/app/templates/utils.html
@@ -445,7 +445,7 @@ action="" is what we want, from http://www.ietf.org/rfc/rfc2396.txt:
       </h2>
       <div class="accordion-collapse collapse {% if not collapsed -%} show{%- endif %}"
            id="{{ target }}">
-        <div class="accordion-body pt-0">{{ caller() }}</div>
+        <div class="accordion-body">{{ caller() }}</div>
       </div>
     </div>
   </div>
