--- a/app/templates/modal.html
+++ b/app/templates/modal.html
@@ -11,4 +11,4 @@
   </div>
 </div>
 
-<script src="{{ url_for('static', filename='js/modal.js') }}"></script>
+<script type="module" src="{{ url_for('static', filename='js/modal.js') }}"></script>
