--- a/app/templates/field.html
+++ b/app/templates/field.html
@@ -9,16 +9,16 @@
   {% set db = namespace(field = none) %}
   {% for field in base_field.fields if field.year == current_user.year %}
     {% set db.field = field %}
-    <div class="row"
-         id="field"
-         data-base-id="{{ base_field.id }}"
-         data-field-id="{{ field.id }}">
-      <h1>
-        {{ "{prefix:02}-{suffix} {name}".format(prefix=base_field.prefix, suffix=base_field.suffix, name=base_field.name) }}
-      </h1>
-      <h6>{{ field.field_type.value }} — {{ field.area | format_number(".2f", "ha") }}</h6>
-    </div>
   {% endfor %}
+  <div class="row"
+       id="field"
+       data-base-id="{{ base_field.id }}"
+       data-field-id="{{ db.field.id }}">
+    <h1>
+      {{ "{prefix:02}-{suffix} {name}".format(prefix=base_field.prefix, suffix=base_field.suffix, name=base_field.name) }}
+    </h1>
+    <h6>{{ db.field.field_type.value }} — {{ db.field.area | format_number(".2f", "ha") }}</h6>
+  </div>
 
   <!-- field nav -->
   <nav class="nav nav-pills bg-green rounded flex-column flex-sm-row my-2 d-print-none"
@@ -61,10 +61,11 @@
        role="tabpanel"
        aria-labelledby="cultivation-tab">
     {% set count = namespace(c = 0) %}
-    {% for cultivation in db.field.cultivations %}
+    {% for cult in db.field.cultivations %}
+      {% set db.cultivation = cult %}
       {% set count.c = count.c + 1 %}
-      {% call render_accordion(title=cultivation.cultivation_type.value, sub_title=cultivation.crop.name, target=cultivation.cultivation_type.name, data_id=cultivation.id, style="accordion-cultivation") %}
-        {% for cult in field.cultivations if cult.cultivation_type == cultivation.cultivation_type %}
+      {% call render_accordion(title=db.cultivation.cultivation_type.value, sub_title=db.cultivation.crop.name, target=db.cultivation.cultivation_type.name, data_id=db.cultivation.id, style="accordion-cultivation") %}
+        {% for cultivation in field.cultivations if cultivation.cultivation_type == db.cultivation.cultivation_type %}
           <div class="row cultivation">
             <h6 class="fw-bolder text-decoration-underline">Cultivation</h6>
             <div class="col-xxl-6 ms-1">{% include "_field_crop.html" %}</div>
@@ -72,13 +73,13 @@
           </div>
           <div class="row organic">
             <h6 class="fw-bolder text-decoration-underline">Organic</h6>
-            <div class="col-xxl-6 ms-1">{{ render_fertilization(cultivation, "organic") }}</div>
-            <div class="col ms-1">{{ render_fertilization_nutrients(cult, "organic") }}</div>
+            <div class="col-xxl-6 ms-1">{{ render_fertilization(db.cultivation, "organic", db.field) }}</div>
+            <div class="col ms-1">{{ render_fertilization_nutrients(cultivation, "organic") }}</div>
           </div>
           <div class="row mineral">
             <h6 class="fw-bolder text-decoration-underline">Mineral</h6>
-            <div class="col-xxl-6 ms-1">{{ render_fertilization(cultivation, "mineral") }}</div>
-            <div class="col ms-1">{{ render_fertilization_nutrients(cult, "mineral") }}</div>
+            <div class="col-xxl-6 ms-1">{{ render_fertilization(db.cultivation, "mineral", db.field) }}</div>
+            <div class="col ms-1">{{ render_fertilization_nutrients(cultivation, "mineral") }}</div>
           </div>
         {% endfor %}
       {% endcall %}
