--- a/app/templates/_field_fertilization.html
+++ b/app/templates/_field_fertilization.html
@@ -1,4 +1,4 @@
-{% macro render_fertilization(cultivation, fert_class) %}
+{% macro render_fertilization(cultivation, fert_class, field) %}
   <div class="table-responsive">
     <table class="table table-sm table-hover table-fertilization">
       <thead>
@@ -27,7 +27,9 @@
                       data-bs-toggle="modal"
                       data-bs-target="#modal"
                       data-form="fertilization"
-                      data-modal="edit">
+                      data-modal="edit"
+                      data-id="{{ fertilization.id }}"
+                      data-field-id="{{ field.id }}">
                 <i class="fa-solid fa-pencil"></i>
               </button>
             </td>
