--- a/app/templates/_field_modifiers.html
+++ b/app/templates/_field_modifiers.html
@@ -20,7 +20,9 @@
                       data-bs-toggle="modal"
                       data-bs-target="#modal"
                       data-form="modifier"
-                      data-modal="edit">
+                      data-modal="edit"
+                      data-id="{{ modifier.id }}"
+                      data-field-id="{{ db.field.id }}">
                 <i class="fa-solid fa-pencil"></i>
               </button>
             </td>
