--- a/app/templates/_field_soil.html
+++ b/app/templates/_field_soil.html
@@ -36,7 +36,9 @@
                     data-bs-toggle="modal"
                     data-bs-target="#modal"
                     data-form="soil"
-                    data-modal="edit">
+                    data-modal="edit"
+                    data-id="{{ sample.id }}"
+                    data-field-id="{{ base_field.id }}">
               <i class="fa-solid fa-pencil"></i>
             </button>
           </td>
