--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -56,8 +56,7 @@
     {% block scripts %}
       <!-- Optional JavaScript -->
       {{ bootstrap.load_js() }}
-      <script type="module" src="{{ url_for('static', filename='js/main.js') }}"></script>
-      <script type="module" src="{{ url_for('static', filename='js/request.js') }}"></script>
+      <script type="module" src="{{ url_for('static', filename='js/index.js') }}"></script>
     {% endblock scripts %}
   </body>
 </html>
