--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -39,7 +39,7 @@
              role="button"
              data-bs-toggle="dropdown"
              aria-expanded="false">
-            Cultivation <span class="badge bg-primary translate-middle position-absolute">{{ "{year:d}".format(year=current_user.year) }}</span>
+            Cultivation <span class="badge bg-green-50 translate-middle position-absolute">{{ "{year:d}".format(year=current_user.year) }}</span>
           </a>
           <ul class="dropdown-menu" aria-labelledby="cultivationDropdown">
             <li>
