--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -323,6 +323,17 @@ tr:hover .btn-edit {
   border-right: 1px solid var(--bs-dark);
 }
 
+.offcanvas-header {
+  padding: 0.8rem;
+  border-bottom: 1px solid var(--bs-dark);
+  background-color: var(--green);
+  color: white;
+}
+
+.offcanvas {
+  width: auto !important;
+}
+
 .sidebar-item {
   font-size: 0.8rem;
   border-color: var(--bs-gray-800);
