--- a/app/templates/sidebar.html
+++ b/app/templates/sidebar.html
@@ -1,15 +1,25 @@
-<nav class="navbar navbar-expand-lg p-0 align-items-start" id="sidebar">
-  <div class="navbar-collapse collapse" id="sidebarNav">
-    <div class="list-group list-group-flush">
-      {% for field in fields %}
-        <a href="{{ url_for('main.field', base_field_id=field.id) }}"
-           class="list-group-item list-group-item-action {% if field.fields[0].field_type.name == 'grassland' %} bg-grassland {% elif field.fields[0].field_type.name == 'cropland' %} bg-cropland {% else %} bg-custom {% endif %} text-white sidebar-item"
-           id="{{ field.id }}">
-          <div class="d-flex w-100 justify-content-between">
-            <span class="fw-500 mb-1">{{ "{prefix:02d}-{suffix} {name}".format(prefix=field.prefix, suffix=field.suffix, name=field.name) }}</span>
-          </div>
-        </a>
-      {% endfor %}
+<nav class="navbar navbar-expand-md p-0 align-items-start" id="sidebar">
+  <div class="offcanvas offcanvas-start" tabindex="-1" id="sidebarNav">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title" id="offcanvasScrollingLabel">Fields</h5>
+      <button type="button"
+              class="btn-close btn-close-white text-reset"
+              data-bs-dismiss="offcanvas"
+              aria-label="Close">
+      </button>
+    </div>
+    <div class="offcanvas-body p-0">
+      <div class="list-group list-group-flush">
+        {% for field in fields %}
+          <a href="{{ url_for('main.field', base_field_id=field.id) }}"
+             class="list-group-item list-group-item-action {% if field.fields[0].field_type.name == 'grassland' %} bg-grassland {% elif field.fields[0].field_type.name == 'cropland' %} bg-cropland {% else %} bg-custom {% endif %} text-white sidebar-item"
+             id="{{ field.id }}">
+            <div class="d-flex w-100 justify-content-between">
+              <span class="fw-500 mb-1">{{ "{prefix:02d}-{suffix} {name}".format(prefix=field.prefix, suffix=field.suffix, name=field.name) }}</span>
+            </div>
+          </a>
+        {% endfor %}
+      </div>
     </div>
   </div>
 </nav>
