fix: removed unnecessary class tag

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar nav-masthead sticky-top navbar-expand-md navbar-dark p-2">
   {% if fields or (request.endpoint and request.endpoint == "main.index" or request.endpoint == "main.field") %}
-    <button class="navbar-toggler navbar-expand-md"
+    <button class="navbar-toggler"
             type="button"
             id="sidebarToggle"
             data-bs-toggle="offcanvas"
