feat(html): add print and edit field buttons

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -89,6 +89,10 @@ main {
   background-color: var(--green-50) !important;
 }
 
+.color-green {
+  color: var(--green) !important;
+}
+
 /*  */
 /* || table styles */
 /*  */
