--- a/app/templates/_field_modifiers.html
+++ b/app/templates/_field_modifiers.html
@@ -21,8 +21,7 @@
                       data-bs-target="#modal"
                       data-form="modifier"
                       data-modal="edit"
-                      data-id="{{ modifier.id }}"
-                      data-field-id="{{ db.field.id }}">
+                      data-id="{{ modifier.id }}">
                 <i class="fa-solid fa-pencil"></i>
               </button>
             </td>
