--- a/app/templates/utils.html
+++ b/app/templates/utils.html
@@ -46,6 +46,16 @@
 {# The following macros were part of Flask-Bootstrap and were modified under the terms of
  its BSD License. Copyright (c) 2023, Philipp Brockmann. All rights reserved. #}
 
+
+{% macro render_icon(name, size=None, text_color=None, title=None, desc=None) %}
+  <svg class="{% if text_color %} {{ text_color }} {% endif %}"
+    width="{{ size }}" height="{{ size }}" fill="currentColor">
+      {% if title is not none %}<title>{{ title }}</title>{% endif %}
+      {% if desc is not none %}<desc>{{ desc }}</desc>{% endif %}
+      <use xlink:href="{{ url_for('bootstrap.static', filename='icons/bootstrap-icons.svg') }}#{{ name }}"/>
+  </svg>
+{% endmacro %}
+
 {% macro render_messages(messages=None, container=False, transform={
     'critical': 'danger',
     'error': 'danger',
@@ -393,7 +403,10 @@ the necessary fix for required=False attributes, but will also not set the requi
                      novalidate=False,
                      render_kw={},
                      form_group_classes='',
-                     form_inline_classes='') %}
+                     form_inline_classes='',
+                     type='',
+                     data_id='',
+                     field_id='') %}
     {#-
 action="" is what we want, from http://www.ietf.org/rfc/rfc2396.txt:
 
@@ -441,6 +454,9 @@ action="" is what we want, from http://www.ietf.org/rfc/rfc2396.txt:
             {%- if role %} role="{{ role }}"{% endif -%}
             {%- if novalidate %} novalidate{% endif -%}
             {%- if render_kw %} {{ render_kw|xmlattr }}{% endif -%}>
+        {% if type %}<input id="form_type" name="form_type" type="hidden" value="{{ type }}">{% endif %}
+        {% if data_id %}<input id="data_id" name="data_id" type="hidden" value="{{ data_id }}">{% endif %}
+        {% if field_id %}<input id="field_id" name="field_id" type="hidden" value="{{ field_id }}">{% endif %}
         {{ form.hidden_tag() }}
         {{ render_hidden_errors(form) }}
         {%- for field in form %}
