--- a/app/templates/utils.html
+++ b/app/templates/utils.html
@@ -90,19 +90,19 @@
       data-bs-autohide="false"
       aria-live="assertive"
       aria-atomic="true">
-        <div class="d-flex">
-          <div class="toast-body">
-            {% if cat == "debug" %}
-              <i class="fa-solid fa-bug"></i>
-            {% elif cat in ("warning", "error", "critical") %}
-              <i class="fa-solid fa-triangle-exclamation me-1"></i>
-            {% else %}
-              <i class="fa-solid fa-circle-info me-1"></i>
-            {% endif %}
-            <span>{{ msg }}</span>
+        <div class="toast-body d-flex">
+          <div class="d-flex align-items-center me-2">
+          {% if cat == "debug" %}
+            {{ render_icon("bug-fill", extra_classes="text-warning") }}
+          {% elif cat in ("warning", "error", "critical") %}
+            {{ render_icon("exclamation-triangle-fill", extra_classes="text-danger") }}
+          {% else %}
+            {{ render_icon("info-circle-fill") }}
+          {% endif %}
           </div>
+          <span class="me-2">{{ msg }}</span>
           <button type="button"
-                  class="btn-close me-2 m-auto"
+                  class="btn-close ms-auto"
                   data-bs-dismiss="toast"
                   aria-label="Close"></button>
         </div>
